# egi-pynetstation

./: .gitignore  .readthedocs.yaml  README.md  eci_env.yml  example.py  example_simple.py  psychopy_test.py  psychtoolbox_test.m  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml
docs/: conf.py  contents.rst  index.rst
docs/source/: conf.py  eci.rst  modules.rst
eci/: NetStation.py  __init__.py  eci.py  exceptions.py  netstation.py  socket_wrapper.py  util.py
eci/tests/: test_get_ntp_byte.py
egi_pynetstation/: NetStation.py  __init__.py  util.py
egi_pynetstation/tests/: test_command.py  test_get_ntp_byte.py  test_get_ntp_float.py  test_package_event.py  test_parse_response.py
tests/: test_command.py  test_get_ntp_byte.py  test_get_ntp_float.py  test_package_event.py  test_parse_response.py
