[tool.poetry]
name = "egi_pynetstation"
version = "0.0.0rc0"
description = "Magstim-EGI EEG amplifier NetStation API"
authors = ["Joshua Teves <joshua.teves@nih.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ntplib = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
