[tool.poetry]
name = "egi_pynetstation"
version = "0.0.0rc1"
description = "Magstim-EGI EEG amplifier NetStation API"
authors = ["Joshua Teves <joshua.teves@nih.gov>"]
license = "MIT"
homepage = "https://egi-pynetstation.readthedocs.io/en/latest/"
repository = "https://github.com/nimh-sfim/egi-pynetstation"

[tool.poetry.dependencies]
python = "^3.8"
ntplib = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
